Fixed issues with the navbar spacing.

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,8 @@
+
+ol {
+    padding-left: 0px;
+} 
+
 /*------------------NewNavBar-------------------*/
 .navbar-header>a {
 	width: 100%;
@@ -7,11 +12,23 @@
 .banner-image1 {
 	width: 20%;
 	float: left;
+	padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 10px;
+ 
 }
 
 .banner-image2 {
 	width: 10%;
 	float: right;
+	padding-top: 10px;
+    padding-bottom: 10px;
+    padding-right: 10px;
+}
+
+/*------------------index-------------------*/
+.jumbotron {
+	padding: 30px;
 }
 
 /*------------------LoginOrRegister-------------------*/
